tests/src/errors/methodDestructure/map.spec.1.ts
{
	const i: "isEmpty" = "isEmpty";
	const arr = new Map([[1, 2], [3, 4]])[i];
}
